AC_INIT(popper.c)
WITH_CCOPTS
CONFIG_RULES
ISODE_INCLUDE
AC_SET_BUILDTOP
AC_PROG_INSTALL
AC_FUNC_CHECK(vsprintf,AC_DEFINE(HAS_VSPRINTF))
AC_CHECK_LIB(socket,main)
AC_CHECK_LIB(nsl,main)
AC_CHECK_LIB(BSD,main)
AC_CHECK_LIB(ndbm,main)
AC_CHECK_LIB(dbm,main)
CHECK_WAIT_TYPE
CHECK_FCNTL
KRB5_POSIX_LOCKS

AC_HAVE_HEADERS(strings.h)
AC_HEADER_CHECK(unistd.h,AC_DEFINE(HAS_UNISTD_H))
AC_HEADER_CHECK(paths.h,AC_DEFINE(HAS_PATHS_H))

KRB_INCLUDE
WITH_KRB5ROOT
V5_AC_OUTPUT_MAKEFILE
