AC_INIT(popper.c)
CONFIG_RULES
AC_PROG_INSTALL
AC_FUNC_CHECK(vsprintf,AC_DEFINE(HAS_VSPRINTF))
AC_CHECK_LIB(BSD,main)
CHECK_WAIT_TYPE
KRB5_POSIX_LOCKS

AC_HAVE_HEADERS(strings.h)
AC_HEADER_CHECK(unistd.h,AC_DEFINE(HAS_UNISTD_H))
AC_HEADER_CHECK(paths.h,AC_DEFINE(HAS_PATHS_H))

USE_ANAME
KRB5_LIBRARIES
V5_USE_SHARED_LIB
V5_AC_OUTPUT_MAKEFILE
