AC_INIT(kadmin.c)
CONFIG_RULES
AC_CHECK_HEADERS(stdlib.h)
AC_PROG_INSTALL
ET_RULES
AC_ARG_WITH([dbm],
[  --with-dbm		use native dbm for kdc database
  --without-dbm		use included version of Berkeley db (default)],
,
withval=no)dnl
if test "$withval" = yes; then
	AC_MSG_RESULT(Using native dbm)
	AC_CHECK_LIB(ndbm,main)
	AC_CHECK_LIB(dbm,main)
else
	AC_MSG_RESULT(Using Berkeley db)
fi
AC_SUBST(DBFLAGS)dnl
dnl
V5_USE_SHARED_LIB
V5_AC_OUTPUT_MAKEFILE
