AC_INIT(admin_server.c)
CONFIG_RULES
AC_PROG_INSTALL
AC_CHECK_LIB(ndbm,main)
AC_CHECK_LIB(dbm,main)
AC_HAVE_HEADERS(unistd.h)
dnl Could check for full stdc environment, but will only test
dnl for stdlib.h
AC_TIME_WITH_SYS_TIME
AC_CHECK_HEADERS(sys/time.h)
AC_HEADER_CHECK(stdlib.h,AC_DEFINE(HAS_STDLIB_H))
CHECK_WAIT_TYPE
CHECK_SIGNALS
AC_PROG_AWK
KRB5_LIBRARIES
V5_USE_SHARED_LIB
V5_AC_OUTPUT_MAKEFILE
