AC_INIT(getdate.y)
WITH_CCOPTS
CONFIG_RULES
AC_PROG_INSTALL
AC_PROG_YACC
AC_HAVE_HEADERS(unistd.h sys/timeb.h alloca.h)
AC_HAVE_FUNCS(ftime timezone)
AC_CHECK_LIB(ndbm,main)
AC_CHECK_LIB(dbm,main)
AC_REPLACE_FUNCS([setenv memmove strftime])
KRB_INCLUDE
USE_KADMCLNT_LIBRARY
USE_GSSAPI_LIBRARY
USE_KADMSRV_LIBRARY
USE_GSSRPC_LIBRARY
USE_DYN_LIBRARY
USE_KDB5_LIBRARY
USE_SS_LIBRARY
KRB5_LIBRARIES
V5_AC_OUTPUT_MAKEFILE
