AC_INIT(getdate.y)
CONFIG_RULES
AC_PROG_INSTALL
AC_PROG_YACC
AC_HAVE_HEADERS(unistd.h sys/timeb.h alloca.h)
AC_HAVE_FUNCS(ftime timezone)
AC_REPLACE_FUNCS([memmove strftime])
USE_KADMCLNT_LIBRARY
USE_GSSAPI_LIBRARY
USE_KADMSRV_LIBRARY
USE_GSSRPC_LIBRARY
USE_DYN_LIBRARY
USE_KDB5_LIBRARY
USE_SS_LIBRARY
V5_USE_SHARED_LIB
KRB5_LIBRARIES
V5_AC_OUTPUT_MAKEFILE
