AC_INIT(kdb5_create.c)
CONFIG_RULES
AC_HAVE_FUNCS(getcwd strstr)
AC_PROG_INSTALL
AC_PROG_AWK
USE_KADMSRV_LIBRARY
USE_GSSRPC_LIBRARY
USE_GSSAPI_LIBRARY
USE_KDB5_LIBRARY
USE_DYN_LIBRARY
USE_KRB4_LIBRARY
USE_GSSAPI_LIBRARY
KRB5_LIBRARIES
V5_USE_SHARED_LIB
AC_CHECK_HEADERS(krb_db.h kdc.h) dnl 
V5_AC_OUTPUT_MAKEFILE
