AC_INIT(kpasswd.c)
WITH_CCOPTS
CONFIG_RULES
AC_SET_BUILDTOP
AC_PROG_INSTALL
AC_HAVE_LIBRARY(socket)
AC_HAVE_LIBRARY(nsl)
AC_HAVE_HEADERS(unistd.h)
AC_COMPILE_CHECK([ut_pid in struct utmp],
[#include <utmp.h>],
[struct utmp ut; ut.ut_pid;],
,
AC_DEFINE(NO_UT_PID))
AC_COMPILE_CHECK([ut_type in struct utmp],
[#include <utmp.h>],
[struct utmp ut; ut.ut_type;],
,
AC_DEFINE(NO_UT_TYPE))
AC_COMPILE_CHECK([ut_host in struct utmp],
[#include <utmp.h>],
[struct utmp ut; ut.ut_host;],
,
AC_DEFINE(NO_UT_HOST))
AC_FUNC_CHECK(getutent,AC_DEFINE(HAVE_GETUTENT))
ET_RULES
KRB_INCLUDE
ISODE_INCLUDE
WITH_KRB5ROOT
AC_OUTPUT(Makefile,[EXTRA_RULES])
