AC_INIT(kpasswd.c)
CONFIG_RULES
AC_CONFIG_SUBDIRS(unit-test)
DO_SUBDIRS
AC_PROG_INSTALL
AC_PROG_AWK

dnl 
dnl The following is a kludge to get around a shared library problem
dnl for NetBSD and Linux.  We have to include -lkdb5 under Linux, and 
dnl we can't include -lkdb5 under NetBSD, due to various breakages in
dnl each system's shared library implementation
dnl

dnl commented out for now --tlyu
dnl
ifelse([AC_MSG_CHECKING([for build host])
AC_CACHE_VAL(krb5_cv_host, [export CC
AC_CANONICAL_HOST
krb5_cv_host=$host])
AC_MSG_RESULT($krb5_cv_host)
case $krb5_cv_host in
*-*-*bsd*)
  echo "Skipping USE KDB5 LIBRARY on BSD to avoid libdb incompatibilites"
  ;;
*)
  USE_KDB5_LIBRARY
  ;;
esac])

KRB5_BUILD_PROGRAM
V5_AC_OUTPUT_MAKEFILE
