AC_INIT(ovsec_kadmd.c)
CONFIG_RULES
AC_PROG_INSTALL
dnl AC_CHECK_FUNCS(waitpid vsprintf)
dnl AC_CHECK_HEADERS(sys/select.h)
dnl CHECK_SIGNALS
dnl CHECK_SETJMP
dnl CHECK_WAIT_TYPE
dnl ET_RULES
USE_KADMSRV_LIBRARY
USE_GSSRPC_LIBRARY
USE_GSSAPI_LIBRARY
USE_KDB5_LIBRARY
USE_DYN_LIBRARY
KRB5_LIBRARIES
V5_USE_SHARED_LIB
V5_AC_OUTPUT_MAKEFILE
