AC_INIT(admin_server.c)
CONFIG_RULES
AC_PROG_INSTALL
AC_CHECK_HEADERS(sys/time.h unistd.h stdlib.h)
CHECK_SIGNALS
CHECK_WAIT_TYPE
AC_PROG_AWK
USE_KADMCLNT_LIBRARY
USE_GSSRPC_LIBRARY
USE_GSSAPI_LIBRARY
USE_DYN_LIBRARY
USE_KDB5_LIBRARY
USE_KRB4_LIBRARY
KRB5_LIBRARIES
V5_USE_SHARED_LIB
V5_AC_OUTPUT_MAKEFILE
