AC_INIT(kadmin5.c)
CONFIG_RULES
AC_PROG_INSTALL
AC_PROG_YACC
AC_HAVE_HEADERS(pwd.h regex.h regexp.h)
AC_HAVE_FUNCS(strptime re_comp regcomp getcwd)
AC_CONST
SS_RULES
AC_ARG_WITH([dbm],
[  --with-dbm		use native dbm for kdc database
  --without-dbm		use included version of Berkeley db (default)],
,
withval=no)dnl
if test "$withval" = yes; then
	AC_MSG_RESULT(Using native dbm)
	AC_CHECK_LIB(ndbm,main)
	AC_CHECK_LIB(dbm,main)
else
	AC_MSG_RESULT(Using Berkeley db)
fi
AC_SUBST(DBFLAGS)dnl
dnl
USE_KADM_LIBRARY
USE_KDB5_LIBRARY
USE_KRB4_LIBRARY
USE_SS_LIBRARY
KRB5_LIBRARIES
V5_USE_SHARED_LIB
V5_AC_OUTPUT_MAKEFILE
