AC_INIT(proto_serv.c)
CONFIG_RULES
AC_PROG_INSTALL
AC_FUNC_CHECK(waitpid,AC_DEFINE(HAVE_WAITPID))
AC_FUNC_CHECK(vsprintf,AC_DEFINE(HAVE_VSPRINTF))
AC_CHECK_HEADERS(sys/select.h)
CHECK_SIGNALS
CHECK_SETJMP
CHECK_WAIT_TYPE
USE_KADMSRV_LIBRARY
USE_GSSRPC_LIBRARY
USE_GSSAPI_LIBRARY
USE_KDB5_LIBRARY
USE_DYN_LIBRARY
KRB5_LIBRARIES
V5_USE_SHARED_LIB
V5_AC_OUTPUT_MAKEFILE
